# AsusTUFLinuxKeyboard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
asustufkeyboard/: color_chooser.py  main.py  pyinstaller.py
asustufkeyboard/buttons/: __init__.py  brightness.py  mode.py  speed.py  state.py
