[tool.poetry]
name = "asustufkeyboard"
version = "0.1.0"
description = "Asus TUF Keyboard Backlight control"
authors = ["Lev Lybin <lev.lybin@gmail.com>"]
readme = "README.md"

[tool.poetry.dev-dependencies]
black = "^24"
isort = "^5"
pyinstaller = "^6"

[tool.poetry.dependencies]
python = "~3.11"
PyQt6 = "^6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = ".pyi?$"
line-length = 119
target-version = ["py310"]

[tool.flake8]
ban-relative-imports = true
docstring-quotes = "double"
inline-quotes = "double"
max-complexity = 15
max-line-length = 119
multiline-quotes = "double"
statistics = true

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry.scripts]
build = "asustufkeyboard.pyinstaller:install"
